@@ -1,7 +1,6 @@
 package manasTrainingService.service.impl;
 
 import lombok.RequiredArgsConstructor;
-import manasTrainingService.config.CustomUserDetails;
 import manasTrainingService.entity.User;
 import manasTrainingService.repositories.UserRepository;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -10,7 +9,7 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -21,19 +20,18 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("Пользователь не найден с email: " + email));
+                .orElseThrow(() -> new UsernameNotFoundException("Пользователь не найден: " + email));
 
         String role = user.getRole().getName();
 
-        return new CustomUserDetails(
+        return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPasswordHash(),
                 user.getIsActive(),
                 true,
                 true,
                 true,
-                Collections.singletonList(new SimpleGrantedAuthority(role)),
-                user.getName()
+                List.of(new SimpleGrantedAuthority(role))
         );
     }
 }
